Minor spelling and grammer fixes, assited by Word. Filled in the month of submission.

--- a/abstract_hebrew.tex
+++ b/abstract_hebrew.tex
@@ -6,7 +6,7 @@
 
 מכיוון שאנו נסמכים על התכונות האנלוגיות, ולא על התוכן הדיגיטלי של התשדורות, אנו מסוגלים לזהות את ההחלפה ברגע שהיא מתרחשת, אפילו אם המידע שמשודר הוא רגיל לחלוטין. באופן זה אנו מסוגלים למנוע התקפה לפני שנגרם כל נזק.
 
-במאמר זה אנו מתארים את תכן המערכת שלנו לגילוי חדירות, ואנו מעריכים את ביצועיה כנגד מודלי יריב שונים. הניתוח שלנו כולל ניתוח תיאורתי על פי מודל שרשראות מרקוביות, כמו גם הערכה אמפירית נרחבת. למטרה זו אספנו גוף נתונים של עקבות 924 CNIRA, דבר שיכול להוות מוקד עניין בלתי תלוי מכיוון שלמירב ידיעתנו אין קורפוס פומבי זמין.
+במאמר זה אנו מתארים את תכן המערכת שלנו לגילוי חדירות, ואנו מעריכים את ביצועיה כנגד מודלי יריב שונים. הניתוח שלנו כולל ניתוח תיאורטי על פי מודל שרשראות מרקוביות, כמו גם הערכה אמפירית נרחבת. למטרה זו אספנו גוף נתונים של עקבות 924 CNIRA, דבר שיכול להוות מוקד עניין בלתי תלוי מכיוון שלמירב ידיעתנו אין קורפוס פומבי זמין.
 
 אנו מוצאים שהמערכת שלנו לגילוי חדירות מציאותית למדי. למשל, היא משיגה כמעט אפס אזעקות שווא לשנייה, ובו בזמן מגלה משדר זדוני בפחות מ-50 מילי שניות, ומגלה מקלט זדוני בפחות מ-3 מילי שניות. במלים אחרות, התקפות טכנאי ניתנות לגילוי באופן מהימן בזמן בדיקות תרום-טיסה, זמן רב לפני ההמראה.
 \end{abstract}
