--- a/biblio.bib
+++ b/biblio.bib
@@ -423,7 +423,7 @@
 }
 
 @article{paalanen2006feature,
-  title={Feature representation and discrimination based on Gaussian mixture model probability densitiespractices and algorithms},
+  title={Feature representation and discrimination based on Gaussian mixture model probability densities—practices and algorithms},
   author={Paalanen, Pekka and Kamarainen, Joni-Kristian and Ilonen, Jarmo and K{\"a}lvi{\"a}inen, Heikki},
   journal={Pattern Recognition},
   volume={39},
@@ -466,7 +466,7 @@
 }
 
 @incollection{MoirIan2013DBN,
-abstract = {Summary This chapter discusses digital data buses and communications networks used in current civil transport aircraft with a brief description of some common military data bus types. The purpose is to summarise the essential features and technologies of data buses and communications networks in common use in civil transport avionics systems so that the reader can appreciate the concepts involved, contrast their performance and attributes and hence understand what makes each best suited to a particular application. An explanation is given of basic principles of bus technologies including encoding techniques, attributes, linear, ring and star topologies followed by a discussion of how these principles have been applied to explore the features and evolution of significant data bus networks seen in today's civil transport aircraft. Descriptions are given of bus types such as ARINC 429 multi‐drop, MIL‐STD‐1553B command‐response protocol, ARINC 629 carrier sense  multiple access collision avoidance, ARINC 664 packet switched network (also sometimes known as aviation full‐duplex  AFDX network) and CANbus. Also discussed are other databus types such as Ethernet, Avionics Standard Communications Bus (ASCB), Commercial Standard Data Bus (CSDB), RS232, RS422 and IEEE 1394 Firewire 800 and the principles of fibre‐optic communications.},
+abstract = {Summary This chapter discusses digital data buses and communications networks used in current civil transport aircraft with a brief description of some common military data bus types. The purpose is to summarise the essential features and technologies of data buses and communications networks in common use in civil transport avionics systems so that the reader can appreciate the concepts involved, contrast their performance and attributes and hence understand what makes each best suited to a particular application. An explanation is given of basic principles of bus technologies including encoding techniques, attributes, linear, ring and star topologies followed by a discussion of how these principles have been applied to explore the features and evolution of significant data bus networks seen in today's civil transport aircraft. Descriptions are given of bus types such as ARINC 429 multi‐drop, MIL‐STD‐1553B command‐response protocol, ARINC 629 carrier sense — multiple access collision avoidance, ARINC 664 packet switched network (also sometimes known as aviation full‐duplex — AFDX network) and CANbus. Also discussed are other databus types such as Ethernet, Avionics Standard Communications Bus (ASCB), Commercial Standard Data Bus (CSDB), RS232, RS422 and IEEE 1394 Firewire 800 and the principles of fibre‐optic communications.},
 pages = {79--118},
 publisher = {John Wiley \& Sons, Ltd},
 booktitle = {Civil Avionics Systems},
